# smart-home

clocker-pio/: platformio.ini
clocker-pio/src/: main.cpp
metar-map/: .gitignore  .pylintrc  micropy.json  pymakr.conf
metar-map/commands/: erase.sh  flash.sh
metar-map/firmware/: httpServer.h  main.c.ino  settingsStorage.h  wifiAccessPoint.h
metar-map/html-ui/: connect.html
metar-map/olc-code/: httpServer.h  main.c.ino  wifiStation.h
metar-map/old-code/: deviceMode.h  settingsStorage.h  time.h
metar-map/projects/weather-api-proxy/crates/launchers/metar_data_processor/: .gitignore  Cargo.toml  host.json
metar-map/projects/weather-api-proxy/crates/launchers/metar_data_processor/src/: main.rs
metar-map/projects/weather-api-proxy/crates/launchers/standalone_http_server/: Cargo.toml
metar-map/projects/weather-api-proxy/crates/launchers/standalone_http_server/src/: main.rs
metar-map/projects/weather-api-proxy/crates/proxy_application/: Cargo.toml
metar-map/projects/weather-api-proxy/crates/proxy_application/src/: config.rs  lib.rs
metar-map/projects/weather-api-proxy/crates/proxy_application/src/dtos/: weather_category.rs  weather_server_record.rs
metar-map/projects/weather-api-proxy/crates/proxy_application/src/repositories/: weather_data_repository.rs
metar-map/projects/weather-api-proxy/crates/proxy_application/src/services/: weather_service.rs
metar-map/projects/weather-api-proxy/crates/proxy_application/tests/: parse_weather_server_response.rs
metar-map/projects/weather-api-proxy/crates/proxy_application/tests/data/: weather_server_response_sample.json
metar-map/projects/weather-api-proxy/crates/proxy_application/tests/utils/: mod.rs
metar-map/src/: appconfig.py  boot.py  main.py  (+1 more)
metar-map/src-micropython/: importmodules.py  main.py
(+128 files in other folders)
