[package]
name = "get_flight_category"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
axum = "0.7.4"
serde = "1.0.197"

proxy_application = { path = "../../proxy_application" }
